--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>CLOCK</title>
+        <title>TIME</title>
         <link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon">
         <link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
