--- a/index.html
+++ b/index.html
@@ -1,84 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>TIME</title>
-        <link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon">
-        <link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-        <style>
-            body {
-                background-color: black;
-                margin: 0;
-                height: 100vh;
-                overflow: hidden;
-            }
 
-            #fullscreen-btn {
-                position: absolute;
-                top: 20px;
-                right: 20px;
-                background-color: transparent;
-                border: none;
-                font-size: 1.5em;
-                color: white;
-                cursor: pointer;
-                text-shadow: 0 0 5px white;
-                transition: transform 0.2s;
-            }
+<head>
+	<meta charset="UTF-8" />
+	<title>Time</title>
+	<link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon" />
+	<link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+	<style>
+		body {
+			background-color: black;
+			margin: 0;
+			height: 100vh;
+			overflow: hidden;
+			color: white;
+			font-family: Arial, sans-serif;
+		}
 
-            #fullscreen-btn:hover {
-                transform: scale(1.2);
-            }
+		#fullscreen-btn {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			background: none;
+			border: none;
+			font-size: 1.5em;
+			color: white;
+			cursor: pointer;
+			text-shadow: 0 0 5px white;
+			transition: transform 0.2s;
+		}
 
-            #clock-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100%;
-            }
+		#fullscreen-btn:hover {
+			transform: scale(1.2);
+		}
 
-            #clock {
-                color: red;
-                font-family: 'Digital-7 Mono', sans-serif;
-                font-size: 15vw;
-                text-shadow:
-                    0 0 5px red,
-                    0 0 10px red,
-                    0 0 15px darkred;
-            }
-        </style>
-    </head>
-    <body>
-        <button id="fullscreen-btn">
-            <i class="bi bi-fullscreen" id="fullscreen-icon"></i>
-        </button>
-        <div id="clock-container">
-            <div id="clock"></div>
-        </div>
-        <script>
-            function updateClock() {
-                const now = new Date();
-                const hours = now.getHours().toString().padStart(2, '0');
-                const minutes = now.getMinutes().toString().padStart(2, '0');
-                const seconds = now.getSeconds().toString().padStart(2, '0');
-                document.getElementById('clock').textContent = `${hours}:${minutes}:${seconds}`;
-            }
-            setInterval(updateClock, 1000);
-            updateClock();
-            const fullscreenBtn = document.getElementById('fullscreen-btn');
-            const fullscreenIcon = document.getElementById('fullscreen-icon');
-            fullscreenBtn.addEventListener('click', () => {
-                if (!document.fullscreenElement) {
-                    document.documentElement.requestFullscreen();
-                } else {
-                    document.exitFullscreen();
-                }
-            });
-            document.addEventListener('fullscreenchange', () => {
-                const isFullscreen = !!document.fullscreenElement;
-                fullscreenIcon.className = isFullscreen ? 'bi bi-fullscreen-exit' : 'bi bi-fullscreen';
-            });
-        </script>
-    </body>
+		#clock-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+		}
+
+		#clock {
+			color: red;
+			font-family: 'Digital-7 Mono', sans-serif;
+			font-size: 15vw;
+			text-shadow:
+				0 0 5px red,
+				0 0 10px red,
+				0 0 15px darkred;
+			/* animação removida */
+		}
+
+		#country-select {
+			position: absolute;
+			top: 20px;
+			left: 20px;
+			font-size: 1em;
+			padding: 8px 14px;
+			border-radius: 8px;
+			border: 1px solid red;
+			background-color: #111;
+			color: #fff;
+			cursor: pointer;
+			transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
+			appearance: none;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			background-image:
+				url("data:image/svg+xml;charset=US-ASCII,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 7L10 12L15 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+			background-repeat: no-repeat;
+			background-position: right 10px center;
+			background-size: 12px 12px;
+		}
+
+		#country-select:hover,
+		#country-select:focus {
+			background-color: #222;
+			border-color: red;
+			box-shadow: 0 0 15px darkred;
+			outline: none;
+		}
+	</style>
+</head>
+
+<body>
+
+	<select id="country-select"></select>
+
+	<button id="fullscreen-btn">
+		<i class="bi bi-fullscreen" id="fullscreen-icon"></i>
+	</button>
+
+	<div id="clock-container">
+		<div id="clock">--:--:--</div>
+	</div>
+
+	<script src="timezones.js"></script>
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			const countrySelect = document.getElementById("country-select");
+			const clock = document.getElementById("clock");
+
+			function populateSelect() {
+				timezones.forEach(({ country, timezone, flag }) => {
+					const option = document.createElement("option");
+					option.value = timezone;
+					option.textContent = `${flag} ${country}`;
+					countrySelect.appendChild(option);
+				});
+			}
+
+			function updateClock(timezone) {
+				const now = new Date();
+				const options = {
+					timeZone: timezone,
+					hour12: false,
+					hour: "2-digit",
+					minute: "2-digit",
+					second: "2-digit"
+				};
+				const formatter = new Intl.DateTimeFormat([], options);
+				const timeString = formatter.format(now);
+				clock.textContent = timeString;
+			}
+
+			function startClock(timezone) {
+				function update() {
+					updateClock(timezone);
+				}
+				update();
+				const now = new Date();
+				const delay = 1000 - now.getMilliseconds();
+				setTimeout(() => {
+					update();
+					setInterval(update, 1000);
+				}, delay);
+			}
+
+			populateSelect();
+			countrySelect.selectedIndex = 0;
+			startClock(countrySelect.value);
+
+			countrySelect.addEventListener("change", (e) => {
+				startClock(e.target.value);
+			});
+
+			const fullscreenBtn = document.getElementById("fullscreen-btn");
+			const fullscreenIcon = document.getElementById("fullscreen-icon");
+			fullscreenBtn.addEventListener("click", () => {
+				if (!document.fullscreenElement) {
+					document.documentElement.requestFullscreen();
+				} else {
+					document.exitFullscreen();
+				}
+			});
+			document.addEventListener("fullscreenchange", () => {
+				const isFullscreen = !!document.fullscreenElement;
+				fullscreenIcon.className = isFullscreen ? "bi bi-fullscreen-exit" : "bi bi-fullscreen";
+			});
+		});
+
+	</script>
+
+</body>
+
 </html>
