--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon" />
 	<link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+
 	<style>
 		body {
 			background-color: black;
@@ -19,14 +20,14 @@
 
 		#fullscreen-btn {
 			position: absolute;
-			top: 20px;
-			right: 20px;
+			top: 2vh;
+			right: 2vw;
 			background: none;
 			border: none;
-			font-size: 1.5em;
+			font-size: 2vw;
 			color: white;
 			cursor: pointer;
-			text-shadow: 0 0 5px white;
+			text-shadow: 0 0 0.5vh white;
 			transition: transform 0.2s;
 		}
 
@@ -36,9 +37,10 @@
 
 		#clock-container {
 			display: flex;
+			flex-direction: column;
 			justify-content: center;
 			align-items: center;
-			height: 100%;
+			height: 100vh;
 		}
 
 		#clock {
@@ -46,20 +48,30 @@
 			font-family: 'Digital-7 Mono', sans-serif;
 			font-size: 15vw;
 			text-shadow:
-				0 0 5px red,
-				0 0 10px red,
-				0 0 15px darkred;
-			/* animação removida */
+				0 0 0.5vh red,
+				0 0 1vh red,
+				0 0 1.5vh darkred;
+		}
+
+		#date {
+			color: red;
+			font-size: 4vw;
+			font-family: 'Digital-7 Mono', sans-serif;
+			text-shadow:
+				0 0 0.5vh red,
+				0 0 1vh red,
+				0 0 1.5vh darkred;
+			margin-top: 3vh;
 		}
 
 		#country-select {
 			position: absolute;
-			top: 20px;
-			left: 20px;
-			font-size: 1em;
-			padding: 8px 14px;
-			border-radius: 8px;
-			border: 1px solid red;
+			top: 2vh;
+			left: 1vw;
+			font-size: 1vw;
+			padding: 1vh 2vw;
+			border-radius: 2vh;
+			border: 0.5vh solid red;
 			background-color: #111;
 			color: #fff;
 			cursor: pointer;
@@ -70,15 +82,15 @@
 			background-image:
 				url("data:image/svg+xml;charset=US-ASCII,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 7L10 12L15 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 			background-repeat: no-repeat;
-			background-position: right 10px center;
-			background-size: 12px 12px;
+			background-position: right 2vw center;
+			background-size: 1.25vw 1.25vw;
 		}
 
 		#country-select:hover,
 		#country-select:focus {
 			background-color: #222;
 			border-color: red;
-			box-shadow: 0 0 15px darkred;
+			box-shadow: 0 0 2vh darkred;
 			outline: none;
 		}
 	</style>
@@ -94,75 +106,11 @@
 
 	<div id="clock-container">
 		<div id="clock">--:--:--</div>
+		<div id="date">--</div>
 	</div>
 
 	<script src="timezones.js"></script>
-	<script>
-		document.addEventListener('DOMContentLoaded', () => {
-			const countrySelect = document.getElementById("country-select");
-			const clock = document.getElementById("clock");
-
-			function populateSelect() {
-				timezones.forEach(({ country, timezone, flag }) => {
-					const option = document.createElement("option");
-					option.value = timezone;
-					option.textContent = `${flag} ${country}`;
-					countrySelect.appendChild(option);
-				});
-			}
-
-			function updateClock(timezone) {
-				const now = new Date();
-				const options = {
-					timeZone: timezone,
-					hour12: false,
-					hour: "2-digit",
-					minute: "2-digit",
-					second: "2-digit"
-				};
-				const formatter = new Intl.DateTimeFormat([], options);
-				const timeString = formatter.format(now);
-				clock.textContent = timeString;
-			}
-
-			function startClock(timezone) {
-				function update() {
-					updateClock(timezone);
-				}
-				update();
-				const now = new Date();
-				const delay = 1000 - now.getMilliseconds();
-				setTimeout(() => {
-					update();
-					setInterval(update, 1000);
-				}, delay);
-			}
-
-			populateSelect();
-			countrySelect.selectedIndex = 0;
-			startClock(countrySelect.value);
-
-			countrySelect.addEventListener("change", (e) => {
-				startClock(e.target.value);
-			});
-
-			const fullscreenBtn = document.getElementById("fullscreen-btn");
-			const fullscreenIcon = document.getElementById("fullscreen-icon");
-			fullscreenBtn.addEventListener("click", () => {
-				if (!document.fullscreenElement) {
-					document.documentElement.requestFullscreen();
-				} else {
-					document.exitFullscreen();
-				}
-			});
-			document.addEventListener("fullscreenchange", () => {
-				const isFullscreen = !!document.fullscreenElement;
-				fullscreenIcon.className = isFullscreen ? "bi bi-fullscreen-exit" : "bi bi-fullscreen";
-			});
-		});
-
-	</script>
-
+	<script src="script.js"></script>
 </body>
 
 </html>
