Updated responsiveness. Block the user to select time and date with mouse.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				0 0 0.5vh red,
 				0 0 1vh red,
 				0 0 1.5vh darkred;
+			user-select: none;
 		}
 
 		#date {
@@ -61,7 +62,9 @@
 				0 0 0.5vh red,
 				0 0 1vh red,
 				0 0 1.5vh darkred;
-			margin-top: 3vh;
+			text-align: center;
+			margin-top: 5%;
+			user-select: none;
 		}
 
 		#country-select {
