Revert "Merge pull request #4 from Diogo13Antunes/3-fix-page-responsiveness"
This reverts commit 038172b39c737e1edc65e05b234992e4bd22f6d2, reversing
changes made to b5a7ccb36e07d40e13d9ebed3dd1be30400ce402.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 				0 0 0.5vh red,
 				0 0 1vh red,
 				0 0 1.5vh darkred;
-			user-select: none;
 		}
 
 		#date {
@@ -62,9 +61,7 @@
 				0 0 0.5vh red,
 				0 0 1vh red,
 				0 0 1.5vh darkred;
-			text-align: center;
-			margin-top: 5%;
-			user-select: none;
+			margin-top: 3vh;
 		}
 
 		#country-select {
