--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 	<meta charset="UTF-8" />
 	<title>Time</title>
 	<link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
 	<link href="https://fonts.cdnfonts.com/css/digital-7-mono" rel="stylesheet" />
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
 	<style>
+		* {
+			box-sizing: border-box;
+		}
+
 		body {
 			background-color: black;
-			margin: 0;
+			color: white;
+			font-family: 'Digital-7 Mono', monospace, Arial, sans-serif;
 			height: 100vh;
 			overflow: hidden;
-			color: white;
-			font-family: Arial, sans-serif;
 		}
 
 		#fullscreen-btn {
@@ -24,11 +28,11 @@
 			right: 2vw;
 			background: none;
 			border: none;
-			font-size: 2vw;
-			color: white;
+			font-size: 2rem;
+			color: #fff;
 			cursor: pointer;
-			text-shadow: 0 0 0.5vh white;
-			transition: transform 0.2s;
+			text-shadow: 0 0 0.5vh #fff;
+			transition: transform 0.2s ease-in-out;
 		}
 
 		#fullscreen-btn:hover {
@@ -45,59 +49,61 @@
 
 		#clock {
 			color: red;
-			font-family: 'Digital-7 Mono', sans-serif;
-			font-size: 15vw;
+			font-size: 15rem;
 			text-shadow:
-				0 0 0.5vh red,
-				0 0 1vh red,
-				0 0 1.5vh darkred;
+				0 0 0.5rem red,
+				0 0 1rem red,
+				0 0 1.5rem darkred;
 		}
 
 		#date {
 			color: red;
-			font-size: 4vw;
-			font-family: 'Digital-7 Mono', sans-serif;
+			font-size: 4rem;
 			text-shadow:
-				0 0 0.5vh red,
-				0 0 1vh red,
-				0 0 1.5vh darkred;
-			margin-top: 3vh;
+				0 0 0.5rem red,
+				0 0 1rem red,
+				0 0 1.5rem darkred;
+			margin-top: 1rem;
+		}
+
+		#clock,
+		#date {
+			user-select: none;
 		}
 
 		#country-select {
 			position: absolute;
 			top: 2vh;
 			left: 1vw;
-			font-size: 1vw;
-			padding: 1vh 2vw;
-			border-radius: 2vh;
-			border: 0.5vh solid red;
+			font-size: 1rem;
+			padding: 0.5rem 1rem;
+			border-radius: 1rem;
+			border: 0.25rem solid red;
 			background-color: #111;
 			color: #fff;
 			cursor: pointer;
-			transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s;
+			transition: background-color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
 			appearance: none;
 			-webkit-appearance: none;
 			-moz-appearance: none;
 			background-image:
 				url("data:image/svg+xml;charset=US-ASCII,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 7L10 12L15 7' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 			background-repeat: no-repeat;
-			background-position: right 2vw center;
-			background-size: 1.25vw 1.25vw;
+			background-position: right 1rem center;
+			background-size: 1.5rem 1.5rem;
 		}
 
 		#country-select:hover,
 		#country-select:focus {
 			background-color: #222;
 			border-color: red;
-			box-shadow: 0 0 2vh darkred;
+			box-shadow: 0 0 1rem darkred;
 			outline: none;
 		}
 	</style>
 </head>
 
 <body>
-
 	<select id="country-select"></select>
 
 	<button id="fullscreen-btn">
