Updated website language.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="UTF-8" />
+	<meta http-equiv="Content-Language" content="en-US">
+	<meta name="language" content="English">
 	<title>Time</title>
 	<link rel="icon" href="https://img.icons8.com/color/48/clock--v1.png" type="image/x-icon" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
